--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -3,11 +3,11 @@
 
 @theme {
   --breakpoint-*: initial;
-  /* --breakpoint-sm: 576px;
+  --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
-  --breakpoint-xl: 1170px; */
-  --breakpoint-xl: 1290px;
+  --breakpoint-xl: 1170px;
+  --breakpoint-2xl: 1290px;
   --color-primary: #050709;
   --color-secondary: #8750F7;
 }
