--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -25,12 +25,14 @@ body{
   background-color:#140C1C;
   font-family: "Sora", sans-serif;
 }
-section h1{
-  font-size: 203px;
-  color: white;
-  letter-spacing: -8.25px;
-}
 h4{
   color: #8750F7;
 }
  
+
+/* banner Component */
+.banner h1{
+  font-size: 203px;
+  color: white;
+  letter-spacing: -8.25px;
+}
